Обновление стилей и скриптов

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -29,7 +29,7 @@
     </div>
 
     <!-- Main Content -->
-    <div class="main-content">
+    <div class="main-content" id="app">
         <main class="content">
             <!-- Tab Content -->
             <div id="metrics" class="tab-content active">
